bk_ida/libquantumida/g1/quantum_qec_counter
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
qec.c:619:1: error: use of undeclared identifier 'counter_1'
counter_1 = 0; 
^
qec.c:623:1: error: use of undeclared identifier 'counter_1'
counter_1 += inc; 
^
qec.c:626:1: error: use of undeclared identifier 'freq_0'
freq_0 = frequency; 
^
qec.c:627:6: error: use of undeclared identifier 'counter_1'
if ( counter_1 >= freq_0 ) 
     ^
qec.c:627:19: error: use of undeclared identifier 'freq_0'
if ( counter_1 >= freq_0 ) 
                  ^
qec.c:629:1: error: use of undeclared identifier 'counter_1'
counter_1 = 0; 
^
qec.c:633:8: error: use of undeclared identifier 'counter_1'
return counter_1; 
       ^
7 errors generated.
